black formatting changes

--- a/notebooks/calcium-diffusion-no-flux-simulations/AnalyticalEigenmodeSolution.ipynb
+++ b/notebooks/calcium-diffusion-no-flux-simulations/AnalyticalEigenmodeSolution.ipynb
@@ -34,28 +34,28 @@
    "outputs": [],
    "source": [
     "# CONSTANTS\n",
-    "L_x = 4     # X LENGTH (um)\n",
-    "L_y = 0.5   # Y LENGTH (um)\n",
-    "L_z = 0.5   # Z LENGTH (um)\n",
+    "L_x = 4  # X LENGTH (um)\n",
+    "L_y = 0.5  # Y LENGTH (um)\n",
+    "L_z = 0.5  # Z LENGTH (um)\n",
     "\n",
     "x_o = 2.35  # VDCC X LOC (um)\n",
     "y_o = 0.25  # VDCC Y LOC (um)\n",
-    "z_o = 0     # VDCC Z LOC (um)\n",
+    "z_o = 0  # VDCC Z LOC (um)\n",
     "\n",
-    "x_s = 2       # SNARE BOX CENTER X LOC (um)\n",
-    "y_s = 0.25    # SNARE BOX CENTER Y LOC (um)\n",
-    "z_s = 0       # SNARE BOX CENTER Z LOC (um)\n",
+    "x_s = 2  # SNARE BOX CENTER X LOC (um)\n",
+    "y_s = 0.25  # SNARE BOX CENTER Y LOC (um)\n",
+    "z_s = 0  # SNARE BOX CENTER Z LOC (um)\n",
     "\n",
     "\n",
     "# Test\n",
-    "#K = 100       # X eigenmodes\n",
-    "#L = 100       # Y eigenmodes\n",
-    "#M = 100       # Z eigenmodes\n",
+    "# K = 100       # X eigenmodes\n",
+    "# L = 100       # Y eigenmodes\n",
+    "# M = 100       # Z eigenmodes\n",
     "K = 11\n",
     "L = 0\n",
     "M = 0\n",
     "\n",
-    "t = 10       # time of interest (microsec, usec) \"MCell models were also run 1,000 times for 10 $ms$ with a timestep of 1 $\\mu s$\""
+    "t = 10  # time of interest (microsec, usec) \"MCell models were also run 1,000 times for 10 $ms$ with a timestep of 1 $\\mu s$\""
    ]
   },
   {
@@ -67,9 +67,9 @@
     "def eigenmode_x(x, t, k):\n",
     "    \"\"\"X-component of the eigenmode\n",
     "\n",
-    "    Returns the individual x-direction eigenmode for a box \n",
+    "    Returns the individual x-direction eigenmode for a box\n",
     "    with an initial impulse of N_ca at x_o at t = t_o\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "      x:\n",
     "        location of interest point, x-direction\n",
@@ -82,10 +82,14 @@
     "      A singular value giving the value of the individual x-direction Green's components\n",
     "    \"\"\"\n",
     "\n",
-    "    #if k == 0:\n",
-    "        #g_xk = 2 / L_x\n",
-    "    \n",
-    "    eigenmode_x = (2 / L_x) * math.cos((k * math.pi * x) / L_x) * math.exp(-D * ((k * math.pi) / L_x)**2 * (t - t_o))\n",
+    "    # if k == 0:\n",
+    "    # g_xk = 2 / L_x\n",
+    "\n",
+    "    eigenmode_x = (\n",
+    "        (2 / L_x)\n",
+    "        * math.cos((k * math.pi * x) / L_x)\n",
+    "        * math.exp(-D * ((k * math.pi) / L_x) ** 2 * (t - t_o))\n",
+    "    )\n",
     "\n",
     "    return eigenmode_x"
    ]
@@ -106,7 +110,7 @@
     "# append eigenmode values\n",
     "for k in range(K):\n",
     "    for t_i in range(len(timepoints)):\n",
-    "        x_modes[k,t_i] = eigenmode_x(x, timepoints[t_i], k)\n"
+    "        x_modes[k, t_i] = eigenmode_x(x, timepoints[t_i], k)"
    ]
   },
   {
@@ -128,11 +132,11 @@
     }
    ],
    "source": [
-    "fig = plt.figure(figsize=(10,7))\n",
+    "fig = plt.figure(figsize=(10, 7))\n",
     "for i in range(K):\n",
-    "    plt.plot(timepoints, x_modes[i,:])\n",
+    "    plt.plot(timepoints, x_modes[i, :])\n",
     "\n",
-    "#plt.ylim([-0.6,0.6])\n",
+    "# plt.ylim([-0.6,0.6])\n",
     "plt.legend(range(K))\n",
     "plt.xticks(fontsize=14)\n",
     "plt.yticks(fontsize=14)\n",
@@ -150,9 +154,9 @@
     "def eigenmode(xyz, klm, t):\n",
     "    \"\"\"3-dimensional eigenmode\n",
     "\n",
-    "    Returns the individual eigenmode for a box \n",
+    "    Returns the individual eigenmode for a box\n",
     "    with an initial impulse of N_ca at x_o at t = t_o\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "      x:\n",
     "        location of interest point, x-direction\n",
@@ -166,10 +170,14 @@
     "    \"\"\"\n",
     "\n",
     "    # Unpack input values\n",
-    "    [x, y, z] = xyz \n",
+    "    [x, y, z] = xyz\n",
     "    [k, l, m] = klm\n",
-    "    \n",
-    "    eigenmode = math.cos((k * math.pi * x) / L_x) * math.cos((l * math.pi * y) / L_y) * math.cos((m * math.pi * z) / L_z)\n",
+    "\n",
+    "    eigenmode = (\n",
+    "        math.cos((k * math.pi * x) / L_x)\n",
+    "        * math.cos((l * math.pi * y) / L_y)\n",
+    "        * math.cos((m * math.pi * z) / L_z)\n",
+    "    )\n",
     "\n",
     "    return eigenmode"
    ]
@@ -190,7 +198,7 @@
     "# append eigenmode values\n",
     "for k in range(K):\n",
     "    for t_i in range(len(timepoints)):\n",
-    "        x_modes[k,t_i] = eigenmode_x(x, timepoints[t_i], k)\n"
+    "        x_modes[k, t_i] = eigenmode_x(x, timepoints[t_i], k)"
    ]
   }
  ],
