--- a/notebooks/calcium-diffusion-no-flux-simulations/CaDiffZeroFluxAnalytical.ipynb
+++ b/notebooks/calcium-diffusion-no-flux-simulations/CaDiffZeroFluxAnalytical.ipynb
@@ -42,43 +42,43 @@
    "outputs": [],
    "source": [
     "# CONSTANTS\n",
-    "L_x = 4     # X LENGTH (um)\n",
-    "L_y = 0.5   # Y LENGTH (um)\n",
-    "L_z = 0.5   # Z LENGTH (um)\n",
+    "L_x = 4  # X LENGTH (um)\n",
+    "L_y = 0.5  # Y LENGTH (um)\n",
+    "L_z = 0.5  # Z LENGTH (um)\n",
     "\n",
     "x_o = 2.35  # VDCC X LOC (um)\n",
     "y_o = 0.25  # VDCC Y LOC (um)\n",
-    "z_o = 0     # VDCC Z LOC (um)\n",
-    "t_o = 0     # C rel time (usec)\n",
+    "z_o = 0  # VDCC Z LOC (um)\n",
+    "t_o = 0  # C rel time (usec)\n",
     "\n",
-    "x_s = 2       # SNARE BOX CENTER X LOC (um)\n",
-    "y_s = 0.25    # SNARE BOX CENTER Y LOC (um)\n",
-    "z_s = 0       # SNARE BOX CENTER Z LOC (um)\n",
+    "x_s = 2  # SNARE BOX CENTER X LOC (um)\n",
+    "y_s = 0.25  # SNARE BOX CENTER Y LOC (um)\n",
+    "z_s = 0  # SNARE BOX CENTER Z LOC (um)\n",
     "\n",
-    "'''\n",
+    "\"\"\"\n",
     "delta_x = 0.040   # SNARE BOX X LEN (um)\n",
     "delta_y = 0.035   # SNARE BOX Y LEN (um)\n",
     "delta_z = 0.05    # SNARE BOX X LEN (um)\n",
-    "'''\n",
+    "\"\"\"\n",
     "\n",
-    "delta_x = 0.1   # SNARE BOX X LEN (um)\n",
-    "delta_y = 0.1   # SNARE BOX Y LEN (um)\n",
-    "delta_z = 0.05    # SNARE BOX Z LEN (um)\n",
+    "delta_x = 0.1  # SNARE BOX X LEN (um)\n",
+    "delta_y = 0.1  # SNARE BOX Y LEN (um)\n",
+    "delta_z = 0.05  # SNARE BOX Z LEN (um)\n",
     "\n",
-    "N_ca = 5275 # no. of ca\n",
+    "N_ca = 5275  # no. of ca\n",
     "conc_ca_init = N_ca / (6.022e23 * 1e-15)\n",
-    "D = 2.20e-4     # Diffusion coeff (um^2/usec)\n",
+    "D = 2.20e-4  # Diffusion coeff (um^2/usec)\n",
     "\n",
     "\n",
     "# Test\n",
-    "#K = 100       # X eigenmodes\n",
-    "#L = 100       # Y eigenmodes\n",
-    "#M = 100       # Z eigenmodes\n",
+    "# K = 100       # X eigenmodes\n",
+    "# L = 100       # Y eigenmodes\n",
+    "# M = 100       # Z eigenmodes\n",
     "K = 10\n",
     "L = 0\n",
     "M = 0\n",
     "\n",
-    "t = 10       # time of interest (microsec, usec) \"MCell models were also run 1,000 times for 10 $ms$ with a timestep of 1 $\\mu s$\""
+    "t = 10  # time of interest (microsec, usec) \"MCell models were also run 1,000 times for 10 $ms$ with a timestep of 1 $\\mu s$\""
    ]
   },
   {
@@ -98,9 +98,9 @@
     "    Integrates the individual x-direction Green's components for a given eigenmode (k)\n",
     "    for a box with y-dimension delta_x centered at x at time t given an initial impulse\n",
     "    at x_o at t = t_o\n",
-    "    \n",
+    "\n",
     "    Args:\n",
-    "      x_o: \n",
+    "      x_o:\n",
     "        location of calcium impulse input, y-direction\n",
     "      t_o:\n",
     "        time of calcium impulse input\n",
@@ -117,12 +117,15 @@
     "\n",
     "    if k == 0:\n",
     "        int_g_xk = delta_x / L_x\n",
-    "    \n",
+    "\n",
     "    else:\n",
-    "        int_g_xk = (4 / (k * math.pi)) * math.cos((k * math.pi * x_o) / L_x) \\\n",
-    "            * math.cos((k * math.pi * x) / L_x) \\\n",
-    "            * math.sin((k * math.pi * delta_x)/(L_x * 2))\\\n",
-    "            * math.exp(-D * ((k * math.pi) / L_x)**2 * (t - t_o))\n",
+    "        int_g_xk = (\n",
+    "            (4 / (k * math.pi))\n",
+    "            * math.cos((k * math.pi * x_o) / L_x)\n",
+    "            * math.cos((k * math.pi * x) / L_x)\n",
+    "            * math.sin((k * math.pi * delta_x) / (L_x * 2))\n",
+    "            * math.exp(-D * ((k * math.pi) / L_x) ** 2 * (t - t_o))\n",
+    "        )\n",
     "\n",
     "    return int_g_xk"
    ]
@@ -144,9 +147,9 @@
     "    Integrates the individual y-direction Green's components for a given eigenmode (l)\n",
     "    for a box with y-dimension delta_y centered at y at time t given an initial impulse\n",
     "    at y_o at t = t_o\n",
-    "    \n",
+    "\n",
     "    Args:\n",
-    "      y_o: \n",
+    "      y_o:\n",
     "        location of calcium impulse input, y-direction\n",
     "      t_o:\n",
     "        time of calcium impulse input\n",
@@ -164,12 +167,15 @@
     "    if l == 0:\n",
     "        int_g_yl = delta_y / L_y\n",
     "\n",
-    "    else: \n",
-    "        int_g_yl = (4 / (l * math.pi)) * math.cos((l * math.pi * y_o) / L_y) \\\n",
-    "            * math.cos((l * math.pi * y) / L_y) \\\n",
-    "            * math.sin((l * math.pi * delta_y) / (L_y * 2))\\\n",
-    "            * math.exp(-D * ((l * math.pi) / L_y)**2 * (t - t_o))\n",
-    "        \n",
+    "    else:\n",
+    "        int_g_yl = (\n",
+    "            (4 / (l * math.pi))\n",
+    "            * math.cos((l * math.pi * y_o) / L_y)\n",
+    "            * math.cos((l * math.pi * y) / L_y)\n",
+    "            * math.sin((l * math.pi * delta_y) / (L_y * 2))\n",
+    "            * math.exp(-D * ((l * math.pi) / L_y) ** 2 * (t - t_o))\n",
+    "        )\n",
+    "\n",
     "    return int_g_yl"
    ]
   },
@@ -190,9 +196,9 @@
     "    Integrates the individual z-direction Green's components for a given eigenmode (m)\n",
     "    for a box with z-dimension delta_z centered at z at time t given an initial impulse\n",
     "    at z_o at t = t_o\n",
-    "    \n",
+    "\n",
     "    Args:\n",
-    "      z_o: \n",
+    "      z_o:\n",
     "        location of calcium impulse input, z-direction\n",
     "      t_o:\n",
     "        time of calcium impulse input\n",
@@ -206,16 +212,19 @@
     "    Returns:\n",
     "      A singular value giving the value of the integrated individual z-direction Green's components\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    if m == 0:\n",
     "        int_g_zm = delta_z / (2 * L_z)\n",
-    "    \n",
+    "\n",
     "    else:\n",
-    "        int_g_zm = (2 / (m * math.pi)) * math.cos((m * math.pi * z_o) / L_z) \\\n",
-    "            * math.cos((m * math.pi * z) / L_z) \\\n",
-    "            * math.sin((m * math.pi * delta_z) / (L_z * 2))\\\n",
-    "            * math.exp(-D * (m * math.pi / L_z)**2 * (t - t_o))\n",
-    "        \n",
+    "        int_g_zm = (\n",
+    "            (2 / (m * math.pi))\n",
+    "            * math.cos((m * math.pi * z_o) / L_z)\n",
+    "            * math.cos((m * math.pi * z) / L_z)\n",
+    "            * math.sin((m * math.pi * delta_z) / (L_z * 2))\n",
+    "            * math.exp(-D * (m * math.pi / L_z) ** 2 * (t - t_o))\n",
+    "        )\n",
+    "\n",
     "    return int_g_zm"
    ]
   },
@@ -232,20 +241,20 @@
    "source": [
     "def int_G(impulse_xyzt, interest_xyzt, box_dim_xyz, eigenmodes_klm):\n",
     "    \"\"\"Sums Green's components for all directions and eigenmodes\n",
-    "    \n",
+    "\n",
     "    Sums the individual x-, y-, and z-direction Green's components across the desired number of\n",
-    "    eigenmodes to give the normalized number of calcium molecules in a box with dimensions \n",
+    "    eigenmodes to give the normalized number of calcium molecules in a box with dimensions\n",
     "    (delta_x, delta_y, delta_z) centered at point (x, y, z) at time t given an initial impulse\n",
     "    of N_ca at (x_o, y_o, z_o) at t = t_o\n",
-    "    \n",
+    "\n",
     "    Args:\n",
-    "      impulse_xyzt: \n",
+    "      impulse_xyzt:\n",
     "        location and time of calcium impulse input; (x_o, y_o, z_o, t_o)\n",
-    "      interest_xyzt: \n",
+    "      interest_xyzt:\n",
     "        location and time of interest point; (x, y, z, t)\n",
-    "      box_dim_xyz: \n",
-    "        dimensions of box of interest centered at interest_xyzt; (delta_x, delta_y, delta_z) \n",
-    "      eigenmodes_klm: \n",
+    "      box_dim_xyz:\n",
+    "        dimensions of box of interest centered at interest_xyzt; (delta_x, delta_y, delta_z)\n",
+    "      eigenmodes_klm:\n",
     "        total number of eigenmodes in x, y, and z directions accordingly; (K, L, M)\n",
     "\n",
     "    Returns:\n",
@@ -255,18 +264,22 @@
     "    # unpack args\n",
     "    (x_o, y_o, z_o, t_o) = impulse_xyzt\n",
     "    (x, y, z, t) = interest_xyzt\n",
-    "    (delta_x, delta_y, delta_z)  = box_dim_xyz\n",
+    "    (delta_x, delta_y, delta_z) = box_dim_xyz\n",
     "    (K, L, M) = eigenmodes_klm\n",
     "\n",
-    "    int_G = 0 # initialize\n",
+    "    int_G = 0  # initialize\n",
     "    int_g_xk_values_per_t = []\n",
     "\n",
     "    # sum across all eigenmodes of interest\n",
     "    for k in range(0, K):\n",
-    "      int_g_xk_values_per_t.append(int_g_xk(x_o, t_o, x, t, delta_x, k))\n",
-    "      for l in range(0, L):\n",
-    "        for m in range(0, M):\n",
-    "          int_G += int_g_xk(x_o, t_o, x, t, delta_x, k) * int_g_yl(y_o, t_o, y, t, delta_y, l) * int_g_zm(z_o, t_o, z, t, delta_z, m)\n",
+    "        int_g_xk_values_per_t.append(int_g_xk(x_o, t_o, x, t, delta_x, k))\n",
+    "        for l in range(0, L):\n",
+    "            for m in range(0, M):\n",
+    "                int_G += (\n",
+    "                    int_g_xk(x_o, t_o, x, t, delta_x, k)\n",
+    "                    * int_g_yl(y_o, t_o, y, t, delta_y, l)\n",
+    "                    * int_g_zm(z_o, t_o, z, t, delta_z, m)\n",
+    "                )\n",
     "\n",
     "    return int_G, int_g_xk_values_per_t"
    ]
@@ -284,29 +297,31 @@
    "source": [
     "def u(N_ca, impulse_xyzt, interest_xyzt, box_dim_xyz, eigenmodes_klm):\n",
     "    \"\"\"Returns number of calcium in a box of interest\n",
-    "    \n",
+    "\n",
     "    Scales the normalized number of calcium molecules in a box with dimensions (delta_x, delta_y, delta_z) centered at\n",
     "    point (x, y, z) at time t by the initial impulse of N_ca at (x_o, y_o, z_o) at t = t_o\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "      N_ca:\n",
     "        the number of initial calcium molecules in the impulse injection\n",
-    "      impulse_xyzt: \n",
+    "      impulse_xyzt:\n",
     "        location and time of calcium impulse input; (x_o, y_o, z_o, t_o)\n",
-    "      interest_xyzt: \n",
+    "      interest_xyzt:\n",
     "        location and time of interest point; (x, y, z, t)\n",
-    "      box_dim_xyz: \n",
-    "        dimensions of box of interest centered at interest_xyzt; (delta_x, delta_y, delta_z) \n",
-    "      eigenmodes_klm: \n",
+    "      box_dim_xyz:\n",
+    "        dimensions of box of interest centered at interest_xyzt; (delta_x, delta_y, delta_z)\n",
+    "      eigenmodes_klm:\n",
     "        total number of eigenmodes in x, y, and z directions accordingly; (K, L, M)\n",
     "\n",
     "    Returns:\n",
     "      A singular value giving the number of calcium molecules in a box with dimensions\n",
     "      given by box_dim_xyz centered at/at time given by interest_xyzt\n",
     "    \"\"\"\n",
-    "    int_G_val, int_g_xk_values_per_t = int_G(impulse_xyzt, interest_xyzt, box_dim_xyz, eigenmodes_klm)\n",
+    "    int_G_val, int_g_xk_values_per_t = int_G(\n",
+    "        impulse_xyzt, interest_xyzt, box_dim_xyz, eigenmodes_klm\n",
+    "    )\n",
     "    u = N_ca * int_G_val\n",
-    "    \n",
+    "\n",
     "    return u, int_g_xk_values_per_t"
    ]
   },
@@ -333,8 +348,14 @@
    ],
    "source": [
     "# Test for 100, 100, 100\n",
-    "u(N_ca, (x_o, y_o, z_o, t_o), (x_s, y_s, z_s, t), (delta_x, delta_y, delta_z), (K, L, M))\n",
-    "#def int_G(x_s, y_s, z_s, t, x_o, y_o, z_o, t_o, delta_x, delta_y, delta_z, K, L, M):"
+    "u(\n",
+    "    N_ca,\n",
+    "    (x_o, y_o, z_o, t_o),\n",
+    "    (x_s, y_s, z_s, t),\n",
+    "    (delta_x, delta_y, delta_z),\n",
+    "    (K, L, M),\n",
+    ")\n",
+    "# def int_G(x_s, y_s, z_s, t, x_o, y_o, z_o, t_o, delta_x, delta_y, delta_z, K, L, M):"
    ]
   },
   {
@@ -353,7 +374,13 @@
    "source": [
     "# 1-D Eigenmode output\n",
     "print(t)\n",
-    "n_ca_snare, int_g_xk_values_per_t = u(N_ca, (x_o, y_o, z_o, t_o), (x_s, y_s, z_s, t), (delta_x, delta_y, delta_z), (K, L, M))"
+    "n_ca_snare, int_g_xk_values_per_t = u(\n",
+    "    N_ca,\n",
+    "    (x_o, y_o, z_o, t_o),\n",
+    "    (x_s, y_s, z_s, t),\n",
+    "    (delta_x, delta_y, delta_z),\n",
+    "    (K, L, M),\n",
+    ")"
    ]
   },
   {
@@ -397,14 +424,17 @@
     "\n",
     "for t in timepoints:\n",
     "    # append number of calcium in snare complex\n",
-    "    n_ca_snare, int_g_xk_values_per_t = u(N_ca, (x_o, y_o, z_o, t_o), (x_s, y_s, z_s, t), (delta_x, delta_y, delta_z), (K, L, M))\n",
+    "    n_ca_snare, int_g_xk_values_per_t = u(\n",
+    "        N_ca,\n",
+    "        (x_o, y_o, z_o, t_o),\n",
+    "        (x_s, y_s, z_s, t),\n",
+    "        (delta_x, delta_y, delta_z),\n",
+    "        (K, L, M),\n",
+    "    )\n",
     "    ca_s.append(n_ca_snare)\n",
     "\n",
     "    # append eigenmode values\n",
-    "    int_g_xk_values.append(int_g_xk_values_per_t)\n",
-    "\n",
-    "\n",
-    "    "
+    "    int_g_xk_values.append(int_g_xk_values_per_t)"
    ]
   },
   {
@@ -429,9 +459,9 @@
     "ca_s = np.array(ca_s)\n",
     "ca_s[ca_s < 0] = 0\n",
     "plt.plot(timepoints, ca_s)\n",
-    "plt.axhline(2.6375, color='k', linestyle='--', alpha=0.3)\n",
-    "#plt.yscale('log')\n",
-    "plt.ylim([0,6])\n",
+    "plt.axhline(2.6375, color=\"k\", linestyle=\"--\", alpha=0.3)\n",
+    "# plt.yscale('log')\n",
+    "plt.ylim([0, 6])\n",
     "plt.xlabel(\"Timepoint (microsecond)\")\n",
     "plt.ylabel(\"Number of Ca in SNARE box\")\n",
     "plt.show()"
@@ -457,13 +487,13 @@
    ],
    "source": [
     "# convert to concentration\n",
-    "conc_ca = np.array(ca_s)/(delta_x * delta_y * delta_z) # (# ca/um^3)\n",
-    "conc_ca_M = conc_ca / (1e-15 * 6.022e23) # convert to Molar\n",
+    "conc_ca = np.array(ca_s) / (delta_x * delta_y * delta_z)  # (# ca/um^3)\n",
+    "conc_ca_M = conc_ca / (1e-15 * 6.022e23)  # convert to Molar\n",
     "conc_ca_M[conc_ca_M < 0] = 0\n",
     "\n",
     "plt.plot(timepoints, conc_ca_M)\n",
-    "#plt.yscale('log')\n",
-    "#plt.ylim([0,0.0001])\n",
+    "# plt.yscale('log')\n",
+    "# plt.ylim([0,0.0001])\n",
     "plt.xlabel(\"Timepoint (microsecond)\")\n",
     "plt.ylabel(\"Concentration of Ca in SNARE box\")\n",
     "plt.show()"
@@ -487,25 +517,36 @@
    ],
    "source": [
     "def eigenmode_checker(N_ca, impulse_xyzt, interest_xyzt, box_dim_xyz, eigenmodes_klm):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Determine how many eigenmodes are necessary.\n",
     "\n",
     "    :param (x_s, y_s, z_s)\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    (x_o, y_o, z_o, t_o) = impulse_xyzt\n",
     "    (x, y, z, t) = interest_xyzt\n",
-    "    (delta_x, delta_y, delta_z)  = box_dim_xyz\n",
+    "    (delta_x, delta_y, delta_z) = box_dim_xyz\n",
     "    (K, L, M) = eigenmodes_klm\n",
     "\n",
     "    # input the largest eigenmode and check what t value is needed to decay it\n",
     "    # 10 * 1/largest eigenvalue to get a ballpark\n",
-    "    int_G = int_g_xk(x_o, t_o, x, t, delta_x, K) * int_g_yl(y_o, t_o, y, t, delta_y, L) * int_g_zm(z_o, t_o, z_s, t, delta_z, M)\n",
+    "    int_G = (\n",
+    "        int_g_xk(x_o, t_o, x, t, delta_x, K)\n",
+    "        * int_g_yl(y_o, t_o, y, t, delta_y, L)\n",
+    "        * int_g_zm(z_o, t_o, z_s, t, delta_z, M)\n",
+    "    )\n",
     "\n",
     "    u = N_ca * int_G\n",
     "\n",
     "    return int_G, u\n",
     "\n",
-    "eigenmode_checker(N_ca, (x_o, y_o, z_o, t_o), (x_s, y_s, z_s, t), (delta_x, delta_y, delta_z), (K, L, M))"
+    "\n",
+    "eigenmode_checker(\n",
+    "    N_ca,\n",
+    "    (x_o, y_o, z_o, t_o),\n",
+    "    (x_s, y_s, z_s, t),\n",
+    "    (delta_x, delta_y, delta_z),\n",
+    "    (K, L, M),\n",
+    ")"
    ]
   },
   {
@@ -537,9 +578,9 @@
     "ca_s = np.array(ca_s)\n",
     "ca_s[ca_s < 0] = 0\n",
     "plt.plot(timepoints, ca_s)\n",
-    "plt.axhline(2.6375, color='k', linestyle='--', alpha=0.3)\n",
-    "#plt.yscale('log')\n",
-    "plt.ylim([0,6])\n",
+    "plt.axhline(2.6375, color=\"k\", linestyle=\"--\", alpha=0.3)\n",
+    "# plt.yscale('log')\n",
+    "plt.ylim([0, 6])\n",
     "plt.xlabel(\"Timepoint (microsecond)\")\n",
     "plt.ylabel(\"Number of Ca in SNARE box\")\n",
     "plt.show()"
@@ -585,14 +626,14 @@
    "source": [
     "int_g_xk_values = np.array(int_g_xk_values)\n",
     "for i in range(10):\n",
-    "    plt.plot(timepoints, int_g_xk_values[:,i])\n",
-    "#plt.axhline(2.6375, color='k', linestyle='--', alpha=0.3)\n",
-    "#plt.yscale('log')\n",
-    "#plt.ylim([0,6])\n",
-    "#plt.xlabel(\"Timepoint (microsecond)\")\n",
-    "#plt.ylabel(\"Number of Ca in SNARE box\")\n",
+    "    plt.plot(timepoints, int_g_xk_values[:, i])\n",
+    "# plt.axhline(2.6375, color='k', linestyle='--', alpha=0.3)\n",
+    "# plt.yscale('log')\n",
+    "# plt.ylim([0,6])\n",
+    "# plt.xlabel(\"Timepoint (microsecond)\")\n",
+    "# plt.ylabel(\"Number of Ca in SNARE box\")\n",
     "plt.show()\n",
-    "#int_g_xk_values[0]"
+    "# int_g_xk_values[0]"
    ]
   }
  ],
