--- a/notebooks/calcium-diffusion-no-flux-simulations/CaDiffZeroFluxMCell.ipynb
+++ b/notebooks/calcium-diffusion-no-flux-simulations/CaDiffZeroFluxMCell.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "def ca_snare_finder(mcell_viz_dir, timepoint):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Calculates average and standard deviation of concentration of calcium across all seeds\n",
     "    in a box around the SNARE complexes at a given time for MCell simulation.\n",
     "\n",
@@ -41,17 +41,17 @@
     "    :param plot: if output should be plotted\n",
     "\n",
     "    :return: concentration of Ca in the SNARE at the given timepoint\n",
-    "    '''   \n",
-    "    \n",
+    "    \"\"\"\n",
+    "\n",
     "    # SNARE box dimensions (using refrac box dimensions)\n",
-    "    delta_x = 0.1   # SNARE BOX X LEN (um)\n",
-    "    delta_y = 0.1   # SNARE BOX Y LEN (um)\n",
-    "    delta_z = 0.1    # SNARE BOX X LEN (um)\n",
+    "    delta_x = 0.1  # SNARE BOX X LEN (um)\n",
+    "    delta_y = 0.1  # SNARE BOX Y LEN (um)\n",
+    "    delta_z = 0.1  # SNARE BOX X LEN (um)\n",
     "\n",
     "    # SNARE BOX LOCATION\n",
-    "    # for a giant box snare complex \n",
-    "    z_s = -.24550 # using refrac box location\n",
-    "    snare_locs = [(0, 0, z_s)] # for only one giant SNARE (x, y, z)\n",
+    "    # for a giant box snare complex\n",
+    "    z_s = -0.24550  # using refrac box location\n",
+    "    snare_locs = [(0, 0, z_s)]  # for only one giant SNARE (x, y, z)\n",
     "\n",
     "    n_ca_all_seeds = []\n",
     "\n",
@@ -59,24 +59,30 @@
     "    for seed in sorted(os.listdir(mcell_viz_dir)):\n",
     "\n",
     "        # data file location\n",
-    "        seed_data_dir = os.path.join(mcell_viz_dir, seed, 'Scene.ascii.{}.dat'.format(timepoint))\n",
+    "        seed_data_dir = os.path.join(\n",
+    "            mcell_viz_dir, seed, \"Scene.ascii.{}.dat\".format(timepoint)\n",
+    "        )\n",
     "\n",
     "        # create dataframe\n",
-    "        loc_data = pd.read_csv(seed_data_dir, delim_whitespace=True, header=None,\n",
-    "                           names=['type', 'id', 'x', 'y', 'z', 'norm_x', 'norm_y', 'norm_z'])\n",
+    "        loc_data = pd.read_csv(\n",
+    "            seed_data_dir,\n",
+    "            delim_whitespace=True,\n",
+    "            header=None,\n",
+    "            names=[\"type\", \"id\", \"x\", \"y\", \"z\", \"norm_x\", \"norm_y\", \"norm_z\"],\n",
+    "        )\n",
     "\n",
     "        # select only calcium\n",
-    "        loc_data = loc_data[loc_data['type'] == 'ca']\n",
+    "        loc_data = loc_data[loc_data[\"type\"] == \"ca\"]\n",
     "\n",
     "        # initialize number of calcium in SNARE rxn zone\n",
-    "        snare_ca_tot = 0        \n",
+    "        snare_ca_tot = 0\n",
     "\n",
     "        # ONLY 1 SNARE TO START (big snare box)\n",
     "        for x_s, y_s, z_s in snare_locs:\n",
     "\n",
     "            # Ugly method (TODO: make nicer)\n",
     "            # get calcium location (x,y,z)\n",
-    "            for ca_x, ca_y, ca_z in zip(loc_data['x'], loc_data['y'], loc_data['z']):\n",
+    "            for ca_x, ca_y, ca_z in zip(loc_data[\"x\"], loc_data[\"y\"], loc_data[\"z\"]):\n",
     "                # check z direction\n",
     "                if (ca_z >= z_s - (delta_z / 2)) & (ca_z <= z_s + (delta_z / 2)):\n",
     "\n",
@@ -84,9 +90,11 @@
     "                    if (ca_x >= x_s - (delta_x / 2)) & (ca_x <= x_s + (delta_x / 2)):\n",
     "\n",
     "                        # check y direction\n",
-    "                        if (ca_y >= y_s - (delta_y / 2)) & (ca_y <= y_s +  (delta_y / 2)):\n",
+    "                        if (ca_y >= y_s - (delta_y / 2)) & (\n",
+    "                            ca_y <= y_s + (delta_y / 2)\n",
+    "                        ):\n",
     "                            snare_ca_tot += 1\n",
-    "            \n",
+    "\n",
     "        # append seed conc to all seeds\n",
     "        n_ca_all_seeds.append(snare_ca_tot)\n",
     "\n",
@@ -108,15 +116,19 @@
    ],
    "source": [
     "# plot for multiple time points\n",
-    "mcell_dir = \"/Users/margotwagner/ucsd/research/DiffusionModel/\" \\\n",
-    "            \"rect_zeroflux_nocalbpmca_files/mcell/output_data/viz_data_ascii\"\n",
+    "mcell_dir = (\n",
+    "    \"/Users/margotwagner/ucsd/research/DiffusionModel/\"\n",
+    "    \"rect_zeroflux_nocalbpmca_files/mcell/output_data/viz_data_ascii\"\n",
+    ")\n",
     "\n",
     "# get time points\n",
-    "timepts = [scene.split('.')[2] for scene in os.listdir(os.path.join(mcell_dir, 'seed_00001'))]\n",
+    "timepts = [\n",
+    "    scene.split(\".\")[2] for scene in os.listdir(os.path.join(mcell_dir, \"seed_00001\"))\n",
+    "]\n",
     "timepts.sort()\n",
     "\n",
-    "#sample points\n",
-    "sampled_timepts = [timepts[i] for i in range(len(timepts)) if i%1==0]\n",
+    "# sample points\n",
+    "sampled_timepts = [timepts[i] for i in range(len(timepts)) if i % 1 == 0]\n",
     "print(sampled_timepts)"
    ]
   },
@@ -138,7 +150,7 @@
    ],
    "source": [
     "# For one timepoint\n",
-    "ca_snare_finder(mcell_dir, '0310')"
+    "ca_snare_finder(mcell_dir, \"0310\")"
    ]
   },
   {
@@ -152,7 +164,7 @@
     "n_ca_all_std = []\n",
     "for tp in sampled_timepts:\n",
     "    n_ca_all_mean.append(ca_snare_finder(mcell_dir, tp)[0])\n",
-    "    n_ca_all_std.append(ca_snare_finder(mcell_dir, tp)[1])\n"
+    "    n_ca_all_std.append(ca_snare_finder(mcell_dir, tp)[1])"
    ]
   },
   {
@@ -198,14 +210,23 @@
     "timepts_int = [int(tp) for tp in sampled_timepts]\n",
     "\n",
     "plt.figure(figsize=(7, 4))\n",
-    "plt.fill_between(timepts_int, np.array(n_ca_all_mean) - np.array(n_ca_all_std), np.array(n_ca_all_mean) + np.array(n_ca_all_std),\n",
-    "                alpha = 0.2, color = 'k')\n",
+    "plt.fill_between(\n",
+    "    timepts_int,\n",
+    "    np.array(n_ca_all_mean) - np.array(n_ca_all_std),\n",
+    "    np.array(n_ca_all_mean) + np.array(n_ca_all_std),\n",
+    "    alpha=0.2,\n",
+    "    color=\"k\",\n",
+    ")\n",
     "plt.plot(timepts_int, n_ca_all_mean)\n",
-    "plt.plot(timepts_int, np.array(n_ca_all_mean) + np.array(n_ca_all_std), color = 'k', alpha = 0.5)\n",
-    "plt.plot(timepts_int, np.array(n_ca_all_mean) - np.array(n_ca_all_std), color = 'k', alpha = 0.5)\n",
+    "plt.plot(\n",
+    "    timepts_int, np.array(n_ca_all_mean) + np.array(n_ca_all_std), color=\"k\", alpha=0.5\n",
+    ")\n",
+    "plt.plot(\n",
+    "    timepts_int, np.array(n_ca_all_mean) - np.array(n_ca_all_std), color=\"k\", alpha=0.5\n",
+    ")\n",
     "plt.xlabel(\"Timepoint (microseconds)\")\n",
     "plt.ylabel(\"Number of Ca in the SNARE box\")\n",
-    "plt.savefig('ca_diff_mcell_output_num.png')\n",
+    "plt.savefig(\"ca_diff_mcell_output_num.png\")\n",
     "plt.show()"
    ]
   },
@@ -231,14 +252,29 @@
     "timepts_int = [int(tp) for tp in sampled_timepts]\n",
     "\n",
     "plt.figure(figsize=(7, 4))\n",
-    "plt.fill_between(timepts_int, np.array(n_ca_all_mean)/2 - np.array(n_ca_all_std)/2, np.array(n_ca_all_mean)/2 + np.array(n_ca_all_std)/2,\n",
-    "                alpha = 0.2, color = 'k')\n",
-    "plt.plot(timepts_int, np.array(n_ca_all_mean)/2)\n",
-    "plt.plot(timepts_int, np.array(n_ca_all_mean)/2 + np.array(n_ca_all_std)/2, color = 'k', alpha = 0.5)\n",
-    "plt.plot(timepts_int, np.array(n_ca_all_mean)/2 - np.array(n_ca_all_std)/2, color = 'k', alpha = 0.5)\n",
+    "plt.fill_between(\n",
+    "    timepts_int,\n",
+    "    np.array(n_ca_all_mean) / 2 - np.array(n_ca_all_std) / 2,\n",
+    "    np.array(n_ca_all_mean) / 2 + np.array(n_ca_all_std) / 2,\n",
+    "    alpha=0.2,\n",
+    "    color=\"k\",\n",
+    ")\n",
+    "plt.plot(timepts_int, np.array(n_ca_all_mean) / 2)\n",
+    "plt.plot(\n",
+    "    timepts_int,\n",
+    "    np.array(n_ca_all_mean) / 2 + np.array(n_ca_all_std) / 2,\n",
+    "    color=\"k\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.plot(\n",
+    "    timepts_int,\n",
+    "    np.array(n_ca_all_mean) / 2 - np.array(n_ca_all_std) / 2,\n",
+    "    color=\"k\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
     "plt.xlabel(\"Timepoint (microseconds)\")\n",
     "plt.ylabel(\"Number of Ca in the SNARE box\")\n",
-    "plt.savefig('ca_diff_mcell_output_num.png')\n",
+    "plt.savefig(\"ca_diff_mcell_output_num.png\")\n",
     "plt.show()"
    ]
   }
