--- a/notebooks/markov-eigenmode-validation/eme-rw-1d-src-variance.ipynb
+++ b/notebooks/markov-eigenmode-validation/eme-rw-1d-src-variance.ipynb
@@ -33,9 +33,11 @@
     "import matplotlib.pyplot as plt\n",
     "import math\n",
     "from typing import Union, Tuple\n",
+    "\n",
     "# import modules for random walk and eignen implementations\n",
     "import sys\n",
-    "sys.path.insert(0, '../../src/')\n",
+    "\n",
+    "sys.path.insert(0, \"../../src/\")\n",
     "import RandomWalk as rw\n",
     "import EigenmarkovDiffusion as emd"
    ]
@@ -204,9 +206,9 @@
     "\n",
     "# Visualize the output array\n",
     "plt.imshow(particle_locs, aspect=5)\n",
-    "plt.ylabel('particle #')\n",
-    "plt.xlabel('time [us]')\n",
-    "plt.title('Particle trajectories in 1D over time (color = 1D position)')\n",
+    "plt.ylabel(\"particle #\")\n",
+    "plt.xlabel(\"time [us]\")\n",
+    "plt.title(\"Particle trajectories in 1D over time (color = 1D position)\")\n",
     "plt.show()"
    ]
   },
@@ -264,9 +266,9 @@
    "source": [
     "# Also look at the unnormalized output:\n",
     "plt.imshow(unnorm_n_per_loc, aspect=100)\n",
-    "plt.xlabel('time [us]')\n",
-    "plt.ylabel('spatial location (entire length = {}um)'.format(line_length))\n",
-    "plt.title('#Particles (color) diffusing over space and time')\n",
+    "plt.xlabel(\"time [us]\")\n",
+    "plt.ylabel(\"spatial location (entire length = {}um)\".format(line_length))\n",
+    "plt.title(\"#Particles (color) diffusing over space and time\")\n",
     "plt.show()"
    ]
   },
@@ -303,7 +305,7 @@
     "# find probability of moving one step\n",
     "jump_probability, jump_rate_constant_k = random_walk.get_jump_probability()\n",
     "\n",
-    "print('P(jump) = {}\\nk(rate) = {}/us'.format(jump_probability, jump_rate_constant_k))\n",
+    "print(\"P(jump) = {}\\nk(rate) = {}/us\".format(jump_probability, jump_rate_constant_k))\n",
     "# Note: for dt = 1 (us), these are equal!"
    ]
   },
@@ -368,7 +370,7 @@
     }
    ],
    "source": [
-    "random_walk.get_variance() # this probably needs to be fixed"
+    "random_walk.get_variance()  # this probably needs to be fixed"
    ]
   },
   {
@@ -395,7 +397,7 @@
     }
    ],
    "source": [
-    "jump_var = n_time_pts * jump_probability * (1-jump_probability)\n",
+    "jump_var = n_time_pts * jump_probability * (1 - jump_probability)\n",
     "jump_var"
    ]
   },
@@ -462,9 +464,9 @@
    "source": [
     "particles_to_plot = 10\n",
     "plt.plot(particle_locs[:particles_to_plot].T)\n",
-    "plt.xlabel('Time step [us]')\n",
-    "plt.ylabel('Location [um]')\n",
-    "plt.title(f'Trajectory of the first {particles_to_plot} particles')\n",
+    "plt.xlabel(\"Time step [us]\")\n",
+    "plt.ylabel(\"Location [um]\")\n",
+    "plt.title(f\"Trajectory of the first {particles_to_plot} particles\")\n",
     "plt.ylim([0, n_spatial_locs])\n",
     "plt.xlim([0, n_time_pts])\n",
     "plt.show()"
@@ -509,12 +511,12 @@
     "    num_left_jumps.append(sum(jumps == -1))\n",
     "    num_right_jumps.append(sum(jumps == 1))\n",
     "\n",
-    "print('Left Jumps')\n",
-    "print(f'Mean: {np.mean(num_left_jumps)}, Var: {np.var(num_left_jumps)}')\n",
+    "print(\"Left Jumps\")\n",
+    "print(f\"Mean: {np.mean(num_left_jumps)}, Var: {np.var(num_left_jumps)}\")\n",
     "print(num_left_jumps)\n",
-    "print('-'*50)\n",
-    "print('Right Jumps')\n",
-    "print(f'Mean: {np.mean(num_right_jumps)}, Var: {np.var(num_right_jumps)}')\n",
+    "print(\"-\" * 50)\n",
+    "print(\"Right Jumps\")\n",
+    "print(f\"Mean: {np.mean(num_right_jumps)}, Var: {np.var(num_right_jumps)}\")\n",
     "print(num_right_jumps)"
    ]
   },
@@ -545,7 +547,7 @@
     }
    ],
    "source": [
-    "n_particles_big = 10000 # 1000\n",
+    "n_particles_big = 10000  # 1000\n",
     "\n",
     "# Could take ~10s to run\n",
     "random_walk_big = rw.RandomWalk(\n",
@@ -561,17 +563,17 @@
     "\n",
     "particle_locs_big = random_walk_big.run_simulation()\n",
     "\n",
-    "jumps = np.diff(particle_locs_big, axis=1) # +1 and -1 would represent jumps\n",
+    "jumps = np.diff(particle_locs_big, axis=1)  # +1 and -1 would represent jumps\n",
     "num_left_jumps = np.sum(jumps == -1, axis=1)\n",
     "num_right_jumps = np.sum(jumps == 1, axis=1)\n",
     "\n",
-    "print('Left Jumps')\n",
-    "print(f'Mean: {np.mean(num_left_jumps)}, Var: {np.var(num_left_jumps)}')\n",
-    "#print(num_left_jumps)\n",
-    "print('-'*50)\n",
-    "print('Right Jumps')\n",
-    "print(f'Mean: {np.mean(num_right_jumps)}, Var: {np.var(num_right_jumps)}')\n",
-    "#print(num_right_jumps)"
+    "print(\"Left Jumps\")\n",
+    "print(f\"Mean: {np.mean(num_left_jumps)}, Var: {np.var(num_left_jumps)}\")\n",
+    "# print(num_left_jumps)\n",
+    "print(\"-\" * 50)\n",
+    "print(\"Right Jumps\")\n",
+    "print(f\"Mean: {np.mean(num_right_jumps)}, Var: {np.var(num_right_jumps)}\")\n",
+    "# print(num_right_jumps)"
    ]
   },
   {
@@ -601,34 +603,38 @@
    ],
    "source": [
     "# Plot the expected jumps\n",
-    "plt.plot([0, n_time_pts], \n",
-    "         [particle_start_loc, particle_start_loc + jump_exp],\n",
-    "         ':',\n",
-    "         label = '$E[right]$'\n",
-    "        )# + np.sqrt(jump_var)])\n",
-    "plt.plot([0, n_time_pts], \n",
-    "         [particle_start_loc, particle_start_loc - jump_exp],\n",
-    "         ':',\n",
-    "         label = '$E[left]$'\n",
-    "        ) # - np.sqrt(jump_var)])\n",
+    "plt.plot(\n",
+    "    [0, n_time_pts],\n",
+    "    [particle_start_loc, particle_start_loc + jump_exp],\n",
+    "    \":\",\n",
+    "    label=\"$E[right]$\",\n",
+    ")  # + np.sqrt(jump_var)])\n",
+    "plt.plot(\n",
+    "    [0, n_time_pts],\n",
+    "    [particle_start_loc, particle_start_loc - jump_exp],\n",
+    "    \":\",\n",
+    "    label=\"$E[left]$\",\n",
+    ")  # - np.sqrt(jump_var)])\n",
     "\n",
     "# Plot the variance in this expectation\n",
-    "plt.fill_between([0, n_time_pts], \n",
-    "         [particle_start_loc, particle_start_loc + jump_exp + np.sqrt(jump_var)],\n",
-    "         [particle_start_loc, particle_start_loc + jump_exp - np.sqrt(jump_var)],\n",
-    "         alpha=0.3,\n",
-    "        )# ])\n",
-    "plt.fill_between([0, n_time_pts], \n",
-    "         [particle_start_loc, particle_start_loc - jump_exp + np.sqrt(jump_var)],\n",
-    "         [particle_start_loc, particle_start_loc - jump_exp - np.sqrt(jump_var)],\n",
-    "         alpha=0.3,\n",
-    "        )# ])\n",
+    "plt.fill_between(\n",
+    "    [0, n_time_pts],\n",
+    "    [particle_start_loc, particle_start_loc + jump_exp + np.sqrt(jump_var)],\n",
+    "    [particle_start_loc, particle_start_loc + jump_exp - np.sqrt(jump_var)],\n",
+    "    alpha=0.3,\n",
+    ")  # ])\n",
+    "plt.fill_between(\n",
+    "    [0, n_time_pts],\n",
+    "    [particle_start_loc, particle_start_loc - jump_exp + np.sqrt(jump_var)],\n",
+    "    [particle_start_loc, particle_start_loc - jump_exp - np.sqrt(jump_var)],\n",
+    "    alpha=0.3,\n",
+    ")  # ])\n",
     "\n",
     "# Plot the simulated results\n",
-    "plt.imshow(unnorm_n_per_loc, aspect=100, interpolation='none')\n",
-    "plt.xlabel('time [us]')\n",
-    "plt.ylabel('spatial location (entire length = {}um)'.format(line_length))\n",
-    "plt.title('#Particles (color) diffusing over space and time')\n",
+    "plt.imshow(unnorm_n_per_loc, aspect=100, interpolation=\"none\")\n",
+    "plt.xlabel(\"time [us]\")\n",
+    "plt.ylabel(\"spatial location (entire length = {}um)\".format(line_length))\n",
+    "plt.title(\"#Particles (color) diffusing over space and time\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -696,27 +702,29 @@
     }
    ],
    "source": [
-    "sigma = np.sqrt(2*jump_var)\n",
+    "sigma = np.sqrt(2 * jump_var)\n",
     "\n",
-    "plt.fill_between([0, n_time_pts],\n",
-    "                 [particle_start_loc, particle_start_loc + sigma],\n",
-    "                 [particle_start_loc, particle_start_loc - sigma],\n",
-    "                 label='$\\sigma$',\n",
-    "                 alpha=0.5,\n",
-    "                )# ])\n",
+    "plt.fill_between(\n",
+    "    [0, n_time_pts],\n",
+    "    [particle_start_loc, particle_start_loc + sigma],\n",
+    "    [particle_start_loc, particle_start_loc - sigma],\n",
+    "    label=\"$\\sigma$\",\n",
+    "    alpha=0.5,\n",
+    ")  # ])\n",
     "\n",
-    "plt.fill_between([0, n_time_pts], \n",
-    "                 [particle_start_loc, particle_start_loc + 6*sigma],\n",
-    "                 [particle_start_loc, particle_start_loc - 6*sigma],\n",
-    "                 label = '$6\\sigma$',\n",
-    "                 alpha=0.3,\n",
-    "                )# ])\n",
+    "plt.fill_between(\n",
+    "    [0, n_time_pts],\n",
+    "    [particle_start_loc, particle_start_loc + 6 * sigma],\n",
+    "    [particle_start_loc, particle_start_loc - 6 * sigma],\n",
+    "    label=\"$6\\sigma$\",\n",
+    "    alpha=0.3,\n",
+    ")  # ])\n",
     "\n",
     "# Plot the simulated results\n",
-    "plt.imshow(unnorm_n_per_loc, aspect=100, interpolation='none')\n",
-    "plt.xlabel('time [us]')\n",
-    "plt.ylabel('spatial location (entire length = {}um)'.format(line_length))\n",
-    "plt.title('#Particles (color) diffusing over space and time')\n",
+    "plt.imshow(unnorm_n_per_loc, aspect=100, interpolation=\"none\")\n",
+    "plt.xlabel(\"time [us]\")\n",
+    "plt.ylabel(\"spatial location (entire length = {}um)\".format(line_length))\n",
+    "plt.title(\"#Particles (color) diffusing over space and time\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -744,14 +752,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaling_factor = 2 # for modes to nodes (or back?)\n",
+    "scaling_factor = 2  # for modes to nodes (or back?)\n",
     "\n",
     "emd_model = emd.EigenmarkovDiffusion(\n",
     "    n_particles=n_particles,\n",
     "    n_spatial_locs=n_spatial_locs,\n",
     "    n_time_pts=n_time_pts,\n",
     "    particle_start_loc=particle_start_loc,\n",
-    "    scaling_factor = scaling_factor,\n",
+    "    scaling_factor=scaling_factor,\n",
     "    # optional params below:\n",
     "    dt=dt,\n",
     "    line_length=line_length,\n",
@@ -783,7 +791,7 @@
    "source": [
     "# find probability of moving one step\n",
     "kdt, k = emd_model.get_jump_probability()\n",
-    "print('P(jump) = {}\\nk(rate) = {}/us'.format(kdt, k))\n",
+    "print(\"P(jump) = {}\\nk(rate) = {}/us\".format(kdt, k))\n",
     "# Note: for dt = 1 (us), these are equal!"
    ]
   },
@@ -883,7 +891,7 @@
     "\n",
     "# Center the colormap on 0\n",
     "## https://stackoverflow.com/questions/7404116/defining-the-midpoint-of-a-colormap-in-matplotlib\n",
-    "divnorm = matplotlib.colors.TwoSlopeNorm(vcenter=0) #, vmin=-.01, vmax=.01)\n",
+    "divnorm = matplotlib.colors.TwoSlopeNorm(vcenter=0)  # , vmin=-.01, vmax=.01)\n",
     "\n",
     "plt.imshow(A, cmap=cmap, norm=divnorm)\n",
     "\n",
@@ -959,9 +967,7 @@
    ],
    "source": [
     "eigenvalues, eigenvectors, eval_sort_index = emd_model.get_eigenvalues_and_vectors(\n",
-    "    print_output=True, \n",
-    "    plot_eigenmodes=True,\n",
-    "    plot_eigenvectors=True\n",
+    "    print_output=True, plot_eigenmodes=True, plot_eigenvectors=True\n",
     ")"
    ]
   },
@@ -1036,8 +1042,7 @@
     "# Find initial values for the number of particles in each eigenmode\n",
     "# For n_particles = 1, it should just be 1 and 0 respectively\n",
     "init_n_positive_modes, init_n_negative_modes = emd_model.get_eme_init_conditions(\n",
-    "    print_output=True, \n",
-    "    plot_output=True\n",
+    "    print_output=True, plot_output=True\n",
     ")"
    ]
   },
@@ -1109,12 +1114,12 @@
     }
    ],
    "source": [
-    "# %matplotlib widget \n",
+    "# %matplotlib widget\n",
     "\n",
     "# run Markov model\n",
     "n_per_eigenmode_state = emd_model.run_simulation(\n",
     "    plot_simulation=True,\n",
-    "    truncation_method='reflect', # if (q+ - q-)<0, flip (reflect) the change in q+ and q-\n",
+    "    truncation_method=\"reflect\",  # if (q+ - q-)<0, flip (reflect) the change in q+ and q-\n",
     ")"
    ]
   },
@@ -1166,8 +1171,7 @@
    "source": [
     "# inverse transform; convert eigenmode representation to node representation\n",
     "node_vals_from_modes = emd_model.convert_to_spatial_nodes(\n",
-    "    n_per_eigenmode_state,\n",
-    "    print_output=True\n",
+    "    n_per_eigenmode_state, print_output=True\n",
     ")"
    ]
   },
@@ -1178,47 +1182,47 @@
    "outputs": [],
    "source": [
     "def graph_num_comparison(\n",
-    "    n1: np.ndarray, \n",
-    "    n2: np.ndarray, \n",
-    "    legend_vals=[], \n",
+    "    n1: np.ndarray,\n",
+    "    n2: np.ndarray,\n",
+    "    legend_vals=[],\n",
     "    title=\"\",\n",
     "    normalize=True,\n",
-    "    n_particles = 50, \n",
-    "    particle_start_loc = 5\n",
-    "    ):\n",
-    "    \n",
-    "    \"\"\"Graph comparing normalized number of particles at each node \n",
+    "    n_particles=50,\n",
+    "    particle_start_loc=5,\n",
+    "):\n",
+    "\n",
+    "    \"\"\"Graph comparing normalized number of particles at each node\n",
     "    and in each mode.\n",
     "\n",
     "    Args:\n",
-    "        n1: normalized number of particles in one condition \n",
+    "        n1: normalized number of particles in one condition\n",
     "        (particles per time)\n",
-    "        n2: normalized number of particles in one condition \n",
+    "        n2: normalized number of particles in one condition\n",
     "        (particles per time)\n",
     "    \"\"\"\n",
     "    import math\n",
+    "\n",
     "    # make subplots\n",
     "    half_n_nodes = math.ceil(n1.shape[0] / 2)\n",
     "    fig, axes = plt.subplots(half_n_nodes, 2, figsize=(14, 10))\n",
-    "    \n",
+    "\n",
     "    # normalize number of particles\n",
     "    if normalize:\n",
     "        n1 = n1 / n_particles\n",
     "        n2 = n2 / n_particles\n",
     "\n",
-    "    \n",
     "    for i, ax in enumerate(axes.flat):\n",
     "        if i == n_spatial_locs:\n",
     "            break\n",
     "        ax.plot(list(range(n_time_pts)), n1[i, :])\n",
     "        ax.plot(list(range(n_time_pts)), n2[i, :])\n",
     "        ax.legend(legend_vals)\n",
-    "        ax.axhline(y=0, color='black', linestyle='--')\n",
+    "        ax.axhline(y=0, color=\"black\", linestyle=\"--\")\n",
     "        ax.set_title(\"{} {}\".format(title, i))\n",
     "\n",
     "    fig.tight_layout()\n",
     "    plt.show()\n",
-    "    \n",
+    "\n",
     "    print(\"{} PARTICLES STARTED NODE {}\".format(n_particles, particle_start_loc))\n",
     "    print(\"NORMALIZATION TURNED ON? \\t\", normalize)"
    ]
@@ -1250,13 +1254,13 @@
    "source": [
     "# compare with random walk simulation\n",
     "graph_num_comparison(\n",
-    "    unnorm_n_per_loc, \n",
+    "    unnorm_n_per_loc,\n",
     "    node_vals_from_modes,\n",
-    "    legend_vals=[\"random walk nodes\", \"eigenmode nodes\"], \n",
+    "    legend_vals=[\"random walk nodes\", \"eigenmode nodes\"],\n",
     "    title=\"Node\",\n",
-    "    n_particles = n_particles,\n",
-    "    particle_start_loc = particle_start_loc,\n",
-    "    normalize = False,\n",
+    "    n_particles=n_particles,\n",
+    "    particle_start_loc=particle_start_loc,\n",
+    "    normalize=False,\n",
     ")"
    ]
   },
