--- a/notebooks/markov-eigenmode-validation/multirun-output-eme-rw.ipynb
+++ b/notebooks/markov-eigenmode-validation/multirun-output-eme-rw.ipynb
@@ -33,19 +33,18 @@
    "outputs": [],
    "source": [
     "def combine_runs(n_runs, path):\n",
-    "    \n",
+    "\n",
     "    # initialize array to store all runs\n",
     "    runs = np.zeros((n_runs, n_spatial_locs, n_time_pts))\n",
-    "    \n",
+    "\n",
     "    # loop through runs\n",
     "    for i in range(n_runs):\n",
-    "            \n",
+    "\n",
     "        # store run in array\n",
-    "        runs[i, :, :] = np.loadtxt(path.format(f'{i:03}'),\n",
-    "                    delimiter=\",\")\n",
-    "    \n",
+    "        runs[i, :, :] = np.loadtxt(path.format(f\"{i:03}\"), delimiter=\",\")\n",
+    "\n",
     "    # return array of all runs\n",
-    "    return runs    "
+    "    return runs"
    ]
   },
   {
@@ -55,14 +54,14 @@
    "outputs": [],
    "source": [
     "def get_stats(n_runs, path):\n",
-    "    \n",
+    "\n",
     "    # combine runs\n",
     "    runs = combine_runs(n_runs, path)\n",
-    "    \n",
+    "\n",
     "    # get mean and std\n",
     "    mean = np.mean(runs, axis=0)\n",
     "    std = np.std(runs, axis=0)\n",
-    "    \n",
+    "\n",
     "    # return mean and std\n",
     "    return mean, std, runs"
    ]
@@ -73,11 +72,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RW_DIR = '../../data/eme-validation/random-walk/20230118_192600/rw-run-{}.csv'\n",
-    "#EME_DIR = '../../data/eme-validation/markov-eme/20230118_192600/eme-run-{}.csv'\n",
-    "EME_DIR = '../../data/eme-validation/markov-eme/factorsqrt2/20230330_153348/eme-run-{}.csv'\n",
+    "RW_DIR = \"../../data/eme-validation/random-walk/20230118_192600/rw-run-{}.csv\"\n",
+    "# EME_DIR = '../../data/eme-validation/markov-eme/20230118_192600/eme-run-{}.csv'\n",
+    "EME_DIR = (\n",
+    "    \"../../data/eme-validation/markov-eme/factorsqrt2/20230330_153348/eme-run-{}.csv\"\n",
+    ")\n",
     "\n",
-    "#factor2/20230330_151605/eme-run-{}.csv'"
+    "# factor2/20230330_151605/eme-run-{}.csv'"
    ]
   },
   {
@@ -3696,50 +3697,50 @@
     }
    ],
    "source": [
-    "#TODO: cleanup repetitive code\n",
+    "# TODO: cleanup repetitive code\n",
     "def plot_multiruns(n_runs):\n",
-    "    # get data \n",
+    "    # get data\n",
     "    rw_mean, rw_std, rw_runs = get_stats(n_runs, RW_DIR)\n",
     "    eme_mean, eme_std, eme_runs = get_stats(n_runs, EME_DIR)\n",
-    "    #mcmc_mean, mcmc_std, mcmc_runs = get_stats(n_runs, '../../data/eme-validation/markov-mcmc-eme/20230207_174420/mcmc-eme-run-{}.csv')\n",
-    "    \n",
+    "    # mcmc_mean, mcmc_std, mcmc_runs = get_stats(n_runs, '../../data/eme-validation/markov-mcmc-eme/20230207_174420/mcmc-eme-run-{}.csv')\n",
+    "\n",
     "    print(eme_runs)\n",
-    "    \n",
+    "\n",
     "    plt.figure(figsize=(14, 10))\n",
-    "    \n",
+    "\n",
     "    # plot particle counts for each position for each run\n",
-    "    \n",
-    "    # get list of colors \n",
+    "\n",
+    "    # get list of colors\n",
     "    colors = plt.cm.tab10_r(np.linspace(0, 1, n_spatial_locs))\n",
-    "            \n",
+    "\n",
     "    # plot mean and std\n",
     "    for i in range(n_spatial_locs):\n",
-    "        \n",
+    "\n",
     "        # plot mean\n",
     "        plt.plot(list(range(n_time_pts)), rw_mean[i, :], color=colors[i])\n",
     "        plt.plot(list(range(n_time_pts)), eme_mean[i, :], color=colors[i])\n",
-    "        #plt.plot(list(range(n_time_pts)), mcmc_mean[i, :], color=colors[i])\n",
+    "        # plt.plot(list(range(n_time_pts)), mcmc_mean[i, :], color=colors[i])\n",
     "        print(eme_mean[i, :])\n",
     "        print(eme_std[i, :])\n",
-    "        \n",
-    "        #plot std\n",
+    "\n",
+    "        # plot std\n",
     "        plt.fill_between(\n",
-    "            list(range(n_time_pts)), \n",
-    "            rw_mean[i, :]+rw_std[i, :],\n",
-    "            rw_mean[i, :]-rw_std[i, :],\n",
+    "            list(range(n_time_pts)),\n",
+    "            rw_mean[i, :] + rw_std[i, :],\n",
+    "            rw_mean[i, :] - rw_std[i, :],\n",
     "            alpha=0.2,\n",
-    "            color=colors[i]\n",
-    "            )\n",
-    "        \n",
+    "            color=colors[i],\n",
+    "        )\n",
+    "\n",
     "        plt.fill_between(\n",
-    "            list(range(n_time_pts)), \n",
-    "            eme_mean[i, :]+eme_std[i, :],\n",
-    "            eme_mean[i, :]-eme_std[i, :],\n",
+    "            list(range(n_time_pts)),\n",
+    "            eme_mean[i, :] + eme_std[i, :],\n",
+    "            eme_mean[i, :] - eme_std[i, :],\n",
     "            alpha=0.2,\n",
-    "            color=colors[i]\n",
-    "            )\n",
-    "        \n",
-    "        '''\n",
+    "            color=colors[i],\n",
+    "        )\n",
+    "\n",
+    "        \"\"\"\n",
     "        plt.fill_between(\n",
     "            list(range(n_time_pts)), \n",
     "            mcmc_mean[i, :]+mcmc_mean[i, :],\n",
@@ -3747,7 +3748,7 @@
     "            alpha=0.2,\n",
     "            color=colors[i]\n",
     "            )\n",
-    "            '''\n",
+    "            \"\"\"\n",
     "\n",
     "    plt.title(\n",
     "        \"Normalized number of particles in each position over time\",\n",
@@ -3755,9 +3756,10 @@
     "    )\n",
     "    plt.xlabel(\"timepoint\", fontsize=14)\n",
     "    plt.ylabel(\"normalized count\", fontsize=14)\n",
-    "    #plt.legend(list(range(n_spatial_locs)))\n",
+    "    # plt.legend(list(range(n_spatial_locs)))\n",
     "    plt.show()\n",
-    "    \n",
+    "\n",
+    "\n",
     "plot_multiruns(1000)"
    ]
   },
@@ -3769,10 +3771,10 @@
    "source": [
     "n_runs = 1000\n",
     "\n",
-    "# get data \n",
+    "# get data\n",
     "rw_mean, rw_std, rw_runs = get_stats(n_runs, RW_DIR)\n",
     "eme_mean, eme_std, eme_runs = get_stats(n_runs, EME_DIR)\n",
-    "#mcmc_mean, mcmc_std, mcmc_runs = get_stats(n_runs, '../../data/eme-validation/markov-mcmc-eme/20230207_174420/mcmc-eme-run-{}.csv')\n",
+    "# mcmc_mean, mcmc_std, mcmc_runs = get_stats(n_runs, '../../data/eme-validation/markov-mcmc-eme/20230207_174420/mcmc-eme-run-{}.csv')\n",
     "\n",
     "print(eme_runs)\n",
     "\n",
@@ -3780,7 +3782,7 @@
     "\n",
     "# plot particle counts for each position for each run\n",
     "\n",
-    "# get list of colors \n",
+    "# get list of colors\n",
     "colors = plt.cm.tab10_r(np.linspace(0, 1, n_spatial_locs))"
    ]
   },
@@ -3812,32 +3814,32 @@
    "source": [
     "# plot mean and std\n",
     "for i in range(n_spatial_locs):\n",
-    "    \n",
+    "\n",
     "    # plot mean\n",
     "    plt.plot(list(range(n_time_pts)), rw_mean[i, :], color=colors[i])\n",
     "    plt.plot(list(range(n_time_pts)), eme_mean[i, :], color=colors[i])\n",
-    "    #plt.plot(list(range(n_time_pts)), mcmc_mean[i, :], color=colors[i])\n",
+    "    # plt.plot(list(range(n_time_pts)), mcmc_mean[i, :], color=colors[i])\n",
     "    print(eme_mean[i, :])\n",
     "    print(eme_std[i, :])\n",
-    "    \n",
-    "    #plot std\n",
+    "\n",
+    "    # plot std\n",
     "    plt.fill_between(\n",
-    "        list(range(n_time_pts)), \n",
-    "        rw_mean[i, :]+rw_std[i, :],\n",
-    "        rw_mean[i, :]-rw_std[i, :],\n",
+    "        list(range(n_time_pts)),\n",
+    "        rw_mean[i, :] + rw_std[i, :],\n",
+    "        rw_mean[i, :] - rw_std[i, :],\n",
     "        alpha=0.2,\n",
-    "        color=colors[i]\n",
-    "        )\n",
-    "    \n",
+    "        color=colors[i],\n",
+    "    )\n",
+    "\n",
     "    plt.fill_between(\n",
-    "        list(range(n_time_pts)), \n",
-    "        eme_mean[i, :]+eme_std[i, :],\n",
-    "        eme_mean[i, :]-eme_std[i, :],\n",
+    "        list(range(n_time_pts)),\n",
+    "        eme_mean[i, :] + eme_std[i, :],\n",
+    "        eme_mean[i, :] - eme_std[i, :],\n",
     "        alpha=0.2,\n",
-    "        color=colors[i]\n",
-    "        )\n",
-    "    \n",
-    "    '''\n",
+    "        color=colors[i],\n",
+    "    )\n",
+    "\n",
+    "    \"\"\"\n",
     "    plt.fill_between(\n",
     "        list(range(n_time_pts)), \n",
     "        mcmc_mean[i, :]+mcmc_mean[i, :],\n",
@@ -3845,7 +3847,7 @@
     "        alpha=0.2,\n",
     "        color=colors[i]\n",
     "        )\n",
-    "        '''\n",
+    "        \"\"\"\n",
     "\n",
     "plt.title(\n",
     "    \"Normalized number of particles in each position over time\",\n",
@@ -3853,7 +3855,7 @@
     ")\n",
     "plt.xlabel(\"timepoint\", fontsize=14)\n",
     "plt.ylabel(\"normalized count\", fontsize=14)\n",
-    "#plt.legend(list(range(n_spatial_locs)))\n",
+    "# plt.legend(list(range(n_spatial_locs)))\n",
     "plt.show()"
    ]
   }
