--- a/notebooks/utility/stochastic_rounding.ipynb
+++ b/notebooks/utility/stochastic_rounding.ipynb
@@ -39,22 +39,23 @@
     "\n",
     "np.random.seed = 2021.698635\n",
     "\n",
+    "\n",
     "def stochastic_round(num):\n",
     "    # get the integer and fractional parts of num:\n",
     "    num_frac, num_int = modf(num)\n",
-    "    \n",
+    "\n",
     "    # now round up, or down, or do a coin flip first\n",
     "    if num_frac > 0.5:\n",
-    "        num_int += 1 # round up\n",
+    "        num_int += 1  # round up\n",
     "    elif num_frac < 0.5:\n",
-    "        num_int -= 1 # round down\n",
-    "    else: # num_frac == 0.5\n",
-    "        coin_flip = np.random.rand() > 0.5 # or should we use >= ?\n",
+    "        num_int -= 1  # round down\n",
+    "    else:  # num_frac == 0.5\n",
+    "        coin_flip = np.random.rand() > 0.5  # or should we use >= ?\n",
     "        if coin_flip:\n",
     "            num_int += 1\n",
     "        else:\n",
     "            num_int -= 1\n",
-    "    \n",
+    "\n",
     "    return num_int"
    ]
   },
@@ -105,17 +106,15 @@
     "        if np_rounded > test_num:\n",
     "            np_up_cnt += 1\n",
     "\n",
-    "    print(\"Rounding {}: numpy rounds up\\t{} of {} times\\t[{:.2f}%]\".format(\n",
-    "        test_num, \n",
-    "        np_up_cnt, \n",
-    "        num_iter,\n",
-    "        100*np_up_cnt/num_iter)\n",
+    "    print(\n",
+    "        \"Rounding {}: numpy rounds up\\t{} of {} times\\t[{:.2f}%]\".format(\n",
+    "            test_num, np_up_cnt, num_iter, 100 * np_up_cnt / num_iter\n",
+    "        )\n",
     "    )\n",
-    "    print(\"Rounding {}: stoch rounds up\\t{} of {} times\\t[{:.2f}%]\".format(\n",
-    "        test_num, \n",
-    "        stoc_up_cnt, \n",
-    "        num_iter,\n",
-    "        100*stoc_up_cnt/num_iter)\n",
+    "    print(\n",
+    "        \"Rounding {}: stoch rounds up\\t{} of {} times\\t[{:.2f}%]\".format(\n",
+    "            test_num, stoc_up_cnt, num_iter, 100 * stoc_up_cnt / num_iter\n",
+    "        )\n",
     "    )"
    ]
   },
